// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink test  should render component with open-in-new window icon 1`] = `
<ExternalLink
  className="externalLink"
  href="www.google.com"
  openInNewIcon={true}
  rel="noopener noreferrer"
  target="_blank"
>
  <a
    className="externalLink showIcon externalLink"
    href="www.google.com"
    rel="noopener noreferrer"
    tabIndex="0"
    target="_blank"
    title="Open link in a new window"
  >
    Google
  </a>
</ExternalLink>
`;

exports[`ExternalLink test  should render component without open-in-new window icon 1`] = `
<ExternalLink
  className="externalLink"
  href="www.google.com"
  openInNewIcon={false}
  rel="noopener noreferrer"
  target="_blank"
>
  <a
    className="externalLinkfalse externalLink"
    href="www.google.com"
    rel="noopener noreferrer"
    tabIndex="0"
    target="_blank"
    title={false}
  >
    Google
  </a>
</ExternalLink>
`;
